# waysip

./: .gitignore  ANNOTATION_MODE.md  CHANGELOG.md  Cargo.toml  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  deny.toml  flake.nix
.github/workflows/: build.yml  deny.yml  deploy.yml  fmt-clippy.yml  nix.yaml  rust.yml
examples/: base.rs
libwaysip/: Cargo.toml
libwaysip/assets/locales/en-US/: libwaysip.ftl
libwaysip/examples/: base.rs  gui.rs
libwaysip/src/: dispatch.rs  error.rs  gui_selector.rs  iced_selector.rs  lib.rs  localization.rs  render.rs  state.rs  utils.rs
nix/: package.nix  shell.nix
src/: error.rs  lib.rs  main.rs  render.rs
waysip/: Cargo.toml
waysip/src/: cli.rs  logger.rs  main.rs  settings.rs  utils.rs
