[workspace]
resolver = "2"
members = ["./waysip", "./libwaysip"]

[workspace.package]
authors = ["Decodertalkers <aakari@tutanota.com>", "Aakash Sen Sharma <aakashsensharma@gmail.com>"]
edition = "2024"
version = "0.6.0"
license = "MIT"
description = "Wayland native (zwlr_layer_shell) area selection client"
repository = "https://github.com/waycrate/waysip"
keywords = ["wayland", "wlroots", "slurp"]
readme = "README.md"

[workspace.dependencies]
libwaysip = { version = "0.6.0", path = "./libwaysip" }
tracing = "0.1"
