[package]
name = "libwaysip"
description = "Wayland native (zwlr_layer_shell) area selection client lib"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
tempfile = "3.27.0"
wayland-client = "0.31.13"
wayland-cursor = "0.31.13"

wayland-protocols = { version = "0.32.11", default-features = false, features = [
	"unstable",
	"staging",
	"client",
] }

wayland-protocols-wlr = { version = "0.3.11", default-features = false, features = [
	"client",
] }

cairo-rs = "0.22.0"
pango = "0.22.0"
pangocairo = "0.22.0"

memmap2 = "0.9.10"
thiserror = "2.0.18"
