[package]
name = "libwaysip"
description = "Wayland native (zwlr_layer_shell) area selection client lib"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
tempfile = "3.27"
wayland-client = "0.31"
wayland-cursor = "0.31"

wayland-protocols = { version = "0.32", default-features = false, features = [
	"unstable",
	"staging",
	"client",
] }

wayland-protocols-wlr = { version = "0.3", default-features = false, features = [
	"client",
] }

cairo-rs = "0.22"
pango = "0.22"
pangocairo = "0.22"

memmap2 = "0.9"
thiserror = "2.0"
