[package]
name = "waysip"
description = "Wayland native (zwlr_layer_shell) area selection client, like slurp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.44", features = ["derive"] }
libwaysip.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

[features]
default = ["gui"]
gui = ["libwaysip/gui"]
