[package]
name = "waysip"
description = "Wayland native (zwlr_layer_shell) area selection client, like slurp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["logger"]
# Initialises the tracing subscriber and exposes the `--log-level` CLI flag.
# Disable to suppress all stderr log output entirely.
logger = ["dep:tracing-subscriber"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
libwaysip.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", optional = true }
