[package]
name = "waysip"
description = "Wayland native (zwlr_layer_shell) area selection client, like slurp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["logger", "completions"]
# Initialises the tracing subscriber and exposes the `--log-level` CLI flag.
# Disable to suppress all stderr log output entirely.
logger = ["dep:tracing-subscriber"]
# Adds `--completions <SHELL>` for generating shell completion scripts.
completions = ["dep:clap_complete", "dep:clap_complete_nushell"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = { version = "4.6", optional = true }
clap_complete_nushell = { version = "4.6", optional = true }
libwaysip.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", optional = true }
